--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -13,3 +13,15 @@ body {
     display: block;
     position: relative;
 }
+
+#help {
+    color: white;
+    background: black;
+    padding-left: 0;
+    padding-right: 0;
+    margin-right: auto;
+    margin-left: auto;
+    display: block;
+    text-align: center;
+    position: relative;
+}
